# LC-updater

./: .env.example  .gitignore  LICENSE  README.md  debug_fetch.cjs  package-lock.json  package.json  push-app-update.sh  push-update.sh  test_key_pwd.key  test_key_pwd.key.pub  test_sign_v2.txt.sig
.agent/: APP-STRUCTURE.yaml  DESKTOP-STRUCTURE.yaml  RESUME-Marco.yaml  claude.md  llm-optimized.yaml  rules.md
.github/workflows/: release.yml
src/: App.tsx  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/updater/: commands.rs  logic.rs  mod.rs  trigger_server.rs  ws_server.rs
src/components/Updater/: Updater.css  Updater.tsx
